--- a/src/gftk.html
+++ b/src/gftk.html
@@ -6,5 +6,5 @@
 	<button class="gftk-save-settings">Save Settings</button>
 	<button class="gftk-load-settings">Load Settings</button>
 	<span class="gftk-divider"></span>
-	<a class="gftk-button gftk-info" href="https://github.com/elusiveweb/GF_Toolkit" target="_blank" rel="external">Info</a>
+	<a class="gftk-button gftk-info" href="https://github.com/eljefe40/GF_Toolkit" target="_blank" rel="external">Info</a>
 </div>
